infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eshelf
  labels:
    name: eshelf
    project: eshelf
    managed-by: kubernetes
